test/files/neg/t5692a.check
Test_2.scala:2: error: this type parameter must be specified
  def x = Macros.foo
                 ^
one error found
